[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
force_single_line = true
import_heading_stdlib      = "Standard Library"
import_heading_thirdparty  = "Third Party Library"
import_heading_firstparty  = "First Party Library"
import_heading_localfolder = "Local Library"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "slack_bolt",
]
ignore_missing_imports = true


[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-rxX",
    "--capture=no",
    "-pno:logging",
    # "--cov",
    # "--cov-append",
    # "--cov-report=term-missing",
]
testpaths = "tests"
python_files = [
    "tests.py",
    "test_*.py",
    "*_tests.py",
]

[tool.poetry]
name = "pollenjp-times"
version = "0.1.0"
description = ""
authors = ["pollenjp <polleninjp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
slack-bolt = "^1.11.6"
omegaconf = "^2.1.1"
pydantic = "^1.9.0"
py-cord = "2.0.0-beta.5"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
autoflake8 = "^0.3.1"
isort = "^5.10.1"
mypy = "^0.931"
nox = "^2022.1.7"
pytest = "^7.0.1"
types-PyYAML = "^6.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
